[project]
name = "comfyui-ccsr"
description = "ComfyUI- CCSR upscaler node"
version = "1.0.0"
license = "LICENSE"
dependencies = ["taming-transformers", "omegaconf", "einops", "pytorch-lightning>=2.2.1", "open-clip-torch>=2.23.0"]

[project.urls]
Repository = "https://github.com/kijai/ComfyUI-CCSR"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "kijai"
DisplayName = "ComfyUI-CCSR"
Icon = ""
